# battlegraf

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/application/: __init__.py
backend/src/application/battle/: use_cases.py
backend/src/application/graph/: use_cases.py
backend/src/application/question_bank/: use_cases.py
backend/src/application/school/: __init__.py  configure_sections.py  create_school.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  battle.py  question.py  school.py
backend/src/domain/enums/: __init__.py  battle_status.py  role.py  subject.py  task_type.py
backend/src/domain/interfaces/: __init__.py
backend/src/domain/interfaces/repositories/: __init__.py  battle_repo.py  (+1 more)
backend/src/domain/services/: battle_engine.py  graph_builder.py
backend/src/infrastructure/: __init__.py  config.py
backend/src/infrastructure/ai/: __init__.py  openai_agent.py
backend/src/infrastructure/auth/: __init__.py  dependencies.py  jwt_handler.py  password.py  permissions.py
backend/src/infrastructure/cache/: __init__.py
backend/src/infrastructure/database/: __init__.py  init_db.py  session.py
backend/src/infrastructure/storage/: __init__.py  local_storage.py
backend/src/presentation/: __init__.py
backend/src/presentation/api/: dependencies.py
backend/storage/materials/: 389347d0-1b3e-44fa-a5b8-bdf940a51b69.txt  mock.txt
backend/tests/: conftest.py
backend/tests/integration/: test_users.py
(+68 files in other folders)
