[project]
name = "battlegraf-api"
version = "0.1.0"
description = "BattleGraf Backend API — Plataforma escolar multiplayer de aprendizaje gamificado por grafos"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery[redis]>=5.3.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "boto3>=1.34.0",
    "pypdf2>=3.0.0",
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "Pillow>=10.2.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.2.2",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "pypdf>=6.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
